--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-opencv-python>=4.5.0
-numpy>=1.22.0
-matplotlib>=3.5.0,<3.10.0
+opencv-python-headless==4.5.4.60
+numpy>=1.20.0
+matplotlib>=3.5.0,<3.8.0
 scikit-image>=0.18.0
 scipy>=1.7.0
 pillow>=9.0.0
-streamlit>=1.20.0
+streamlit>=1.10.0
 requests>=2.25.0
 python-dotenv>=0.15.0
 tiktoken>=0.3.0
