--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-opencv-python-headless==4.5.4.60
-numpy>=1.20.0
-matplotlib>=3.5.0,<3.8.0
-scikit-image>=0.18.0
-scipy>=1.7.0
-pillow>=9.0.0
-streamlit>=1.10.0
-requests>=2.25.0
+opencv-python-headless>=4.8.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+scikit-image>=0.21.0
+scipy>=1.10.0
+pillow>=10.0.0
+streamlit>=1.28.0
+requests>=2.31.0
 # Optional dependencies (will be gracefully handled if not available)
-python-dotenv>=0.15.0; platform_system != "Linux"  # Optional for environment variable loading
-tiktoken>=0.3.0; platform_system != "Linux"  # Optional for token counting
-qrcode>=7.3.0; platform_system != "Linux"  # Optional for QR code generation
+python-dotenv>=1.0.0; platform_system != "Linux"  # Optional for environment variable loading
+tiktoken>=0.5.0; platform_system != "Linux"  # Optional for token counting
+qrcode>=7.4.0; platform_system != "Linux"  # Optional for QR code generation
